--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="323dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="323dp"
+        android:textColor="#040000"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
